[package]
name = "twilight-cache-redis"
version = "0.15.4"
edition = "2021"
categories = ["caching"]
keywords = ["discord", "discord-api", "twilight"]

[features]
default = []
bb8 = ["dep:bb8-redis"]

[dependencies]
twilight-model = "0.15.4"
redis = { version = "0.26.1", features = ["tokio-comp", "json"] }
bb8-redis = { version = "0.16.0", optional = true }
tokio = { default-features = false, features = ["sync"], version = "1.39.3" }
serde = { features = ["derive"], version = "1" }
bitflags = "2.6.0"
paste = "1.0.15"
itoa = "1.0.11"
bincode = "1.3.3"
thiserror = "1.0.63"
trait-variant = "0.1.2"
seq-macro = "0.3.5"
atoi = "2.0.0"

[dev-dependencies]
static_assertions = "1.1.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
